[gd_scene load_steps=4 format=3 uid="uid://u6ghdskpk4bi"]

[ext_resource type="Script" path="res://vehicle/body/vehicle_body.gd" id="1_eg4qo"]
[ext_resource type="Texture2D" uid="uid://bb18q7aaa2rb4" path="res://assets/art/2D-Racer-Spritesheet.png" id="2_8uiv0"]
[ext_resource type="Script" path="res://vehicle/body/vehicle_collider.gd" id="3_fuk3x"]

[node name="VehicleBody" type="Node2D"]
script = ExtResource("1_eg4qo")

[node name="VehicleSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_8uiv0")
hframes = 7
region_enabled = true
region_rect = Rect2(0, 68, 1288, 124)

[node name="VehicleCollider" type="Area2D" parent="."]
script = ExtResource("3_fuk3x")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VehicleCollider"]

[node name="Front" type="Marker2D" parent="."]
position = Vector2(88, -6)

[node name="Rear" type="Marker2D" parent="."]
position = Vector2(-32, 54)
